# Cloudera-Inference-With-CursorAI

./: ModelTesting.code-workspace  ModelTesting.code-workspace.example  README.md  config-llm.json  config-llm.json.example  config.json  config.json.example  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt
agents/: __init__.py  cli.py  cloudera_agent.py
docs/: CURSOR_INTEGRATION_GUIDE.md  CURSOR_QUICK_START.md  DEVELOPER_RECOMMENDATIONS.md  VECTOR_STORE_SELECTION.md  WORKSPACE_PROFILE.md
examples/: README.md  example_agent_usage.py  example_developer_usage.py  example_llm_usage.py  run_example.sh
scripts/: configure_cursor.py  create_cursor_workspace.py
tests/: README_TESTING.md  conftest.py  test_agent.py  test_all.sh  test_cloudera_endpoint.sh  test_config.py  test_llm.py  test_llm_connection.py  test_security_compliance.sh  test_vector_store.py
